--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,8 +17,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <img src="/sign2speech/favicon.ico" alt="Logo" width="200">
-      <!-- <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1> -->
+      <a href="/sign2speech/" ><img src="/sign2speech/favicon.ico" alt="Logo" width="200"></a>
+      <h1 class="project-name"></h1>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
